# opencv_demo

./: README.md  nn_play.py
build-demo1-Imported_Kit_5d4391-Debug/: Makefile  demo1
build-dnn_c-Imported_Kit_5d4391-Debug/: Makefile  dnn_c
demo1/: Bbox.cpp  CMakeCache.txt  CMakeLists.txt  DFT.cpp  demo1.pro  edcirlces.cpp  intergral_blur.cpp  surf_match.cpp  tag_generator.cpp  thread_demo.cpp
dnn_c/: Function.cpp  Function.h  Net.cpp  Net.h  dnn_c.pro  main.cpp
simple_net-master/src/: Function.cpp
